--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <header>
-            <h1>Wallet Bitcoin Sicuro</h1>
+            <h1>Shamir Bitcoin Address Generator</h1>
         </header>
         <main>
             <!-- Nuovo riquadro con paragrafo introduttivo -->
             <div class="intro-box">
-                <p>Benvenuti nel Wallet Bitcoin Sicuro, uno strumento avanzato sviluppato dalla Sezione Criptovalute dei Carabinieri. Questo software permette di creare, verificare e ricostruire chiavi private Bitcoin in modo sicuro e affidabile. Utilizzate le funzioni sottostanti per gestire le vostre operazioni Bitcoin in tutta sicurezza.</p>
+                <p>Crea un indirizzo Bitcoin offline in modo sicuro. Condividi la chiave privata tra più utenti grazie al protocollo Shamir, che suddivide la chiave in parti multiple.</p>
             </div>
 
             <!-- Pulsanti in linea senza riquadro esterno -->
